[tool.poetry]
name = "pymisc2"
version = "0.1.0"
description = "python misc2 library"
authors = ["ppcrong <ppcrong@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
PyQt5-stubs = "^5.15.6"
opencv-python = "^4.6.0"
Pillow = "^9.1.1"
pyusb = "^1.2.1"
pyserial = "^3.5"
pylink-square = "^0.13.0"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
